Skip to content

libvlc_set_fullscreen fails with audio visualisation

When using audio visualisation, libvlc_set_fullscreen raises an exception "No active video output". This seems to be caused in trunk/src/control/video.c by libvlc_set_fullscreen calling GetVout which in turn returns a vlc_object_find( p_input_thread, VLC_OBJECT_VOUT, FIND_CHILD ).

I found #17093 (closed), which seems to patch a similar issue in skins2 by changing FIND_CHILD to FIND_ANYWHERE. Should GetVout or libvlc_set_fullscreen be changed in a similar matter?

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information