control/video: find the vout anywhere, so the one spawned by audio output (audio visualization) can be found. fix #1202